ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grocery-ingress
  namespace: grocery-app
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
